<resources>
    <string name="app_name">Covid-19 Realtime</string>

    <!--ARGUMENTS-->
    <string name="country_name_argument">NAME</string>

    <!--MENU-->
    <string name="mnu_countries">Affected countries</string>

    <!--DASHBOARD-->
    <string name="dashboard_title">All cases</string>
    <string name="dashboard_all_cases">Cases</string>
    <string name="dashboard_all_recovered">Recovered</string>
    <string name="dashboard_all_deaths">Deaths</string>

    <!--COUNTRIES-->
    <string name="countries_title">Affected countries</string>
    <string name="countries_look_for">Write the name of a country</string>
    <string name="search_hint">Write a country</string>
    <!--COUNTRIES ITEM-->
    <string name="countries_item_img_description">Country flag</string>
    <string name="countries_item_cases">Total cases: %d</string>
    <string name="countries_item_recovered">Recovered: %d</string>
    <string name="countries_item_deaths">Deaths: %d</string>

    <!--COUNTRY-->
    <string name="country_title">Country statistics</string>
    <string name="country_lbl_cases">Cases:</string>
    <string name="country_lbl_today_cases">Today cases:</string>
    <string name="country_lbl_recovered">Total recovered:</string>
    <string name="country_lbl_deaths">Deaths:</string>
    <string name="country_lbl_today_deaths">Today deaths:</string>
    <string name="country_lbl_critical">Critical state:</string>
    <string name="country_img_description">Country flag</string>

</resources>
