<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/countries_item_img_country"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/main_margin_x2"
        android:contentDescription="@string/countries_item_img_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_world_64" />

    <TextView
        android:id="@+id/countries_item_lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_font_size"
        android:layout_margin="@dimen/main_margin_x2"
        app:layout_constraintStart_toEndOf="@+id/countries_item_img_country"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countries_item_lbl_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countries_item_cases"
        android:layout_margin="@dimen/main_margin_x2"
        app:layout_constraintStart_toEndOf="@+id/countries_item_img_country"
        app:layout_constraintTop_toBottomOf="@+id/countries_item_lbl_name" />

    <TextView
        android:id="@+id/countries_item_lbl_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin_x2"
        android:text="@string/countries_item_recovered"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/countries_item_img_country"
        app:layout_constraintTop_toBottomOf="@+id/countries_item_lbl_cases" />

    <TextView
        android:id="@+id/countries_item_lbl_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin_x2"
        android:text="@string/countries_item_deaths"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/countries_item_lbl_recovered"
        app:layout_constraintTop_toBottomOf="@+id/countries_item_lbl_cases" />

</androidx.constraintlayout.widget.ConstraintLayout>